--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,6 +15,7 @@ cache:
   - '%APPVEYOR_BUILD_FOLDER%\mason_packages'
   - '%APPVEYOR_BUILD_FOLDER%\LLVM-5.0.1-win64.exe'
   - '%APPVEYOR_BUILD_FOLDER%\cmake-3.10.1-win64-x64.zip'
+  - '%APPVEYOR_BUILD_FOLDER%\ninja-win.zip'
 
 install:
   - ps: |
@@ -29,23 +30,33 @@ install:
       }
       scripts\check-sha256.ps1 cmake-3.10.1-win64-x64.zip 8251F70C85B58F3CA1F24E4A3B0637E2D609B5E4A341D00B70E02E89244D5029
       Start-Process -FilePath '7z' -ArgumentList 'x','cmake-3.10.1-win64-x64.zip','-oC:\' -Wait
+  - ps: |
+      if (!(Test-Path ninja-win.zip)) {
+          appveyor DownloadFile https://github.com/ninja-build/ninja/releases/download/v1.8.2/ninja-win.zip
+      }
+      scripts\check-sha256.ps1 ninja-win.zip C80313E6C26C0B9E0C241504718E2D8BBC2798B73429933ADF03FDC6D84F0E70
+      Start-Process -FilePath '7z' -ArgumentList 'x','ninja-win.zip','-oC:\' -Wait
 
 before_build:
-  - set PATH=C:\LLVM-5.0.1\msbuild-bin;%PATH%
+  - set PATH=C:\LLVM-5.0.1\bin;%PATH%
   - set PATH=C:\cmake-3.10.1-win64-x64\bin;%PATH%
-  - set QT_CMAKE=C:\Qt\5.7\msvc2015_64\lib\cmake
+  - set CC=clang-cl
+  - set CXX=clang-cl
   - mkdir %APPVEYOR_BUILD_FOLDER%\build
   - cd %APPVEYOR_BUILD_FOLDER%\build
 
 build_script:
-  - cmake -G "Visual Studio 14 2015 Win64" -T LLVM-vs2014 -DMBGL_PLATFORM=qt -DWITH_QT_DECODERS=ON -DWITH_QT_I18N=ON -DWITH_NODEJS=OFF -DCMAKE_PREFIX_PATH=%QT_CMAKE% %APPVEYOR_BUILD_FOLDER% & exit 0
-  - cmake --build . --config Release --target qmapboxgl -- /m
+  - call "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\vcvarsall.bat" amd64
+  - cmake -G "Ninja" -DMBGL_PLATFORM=qt -DWITH_QT_DECODERS=ON -DWITH_QT_I18N=ON -DWITH_NODEJS=OFF -DCMAKE_BUILD_TYPE=Release -DCMAKE_PREFIX_PATH=C:\Qt\5.7\msvc2015_64\lib\cmake -DCMAKE_MAKE_PROGRAM=C:\ninja.exe ..
+  - cmake --build . -- -j %NUMBER_OF_PROCESSORS%
 
 after_build:
   - mkdir qmapboxgl
   - mkdir qmapboxgl\lib
   - mkdir qmapboxgl\include
-  - copy Release\qmapboxgl.* qmapboxgl\lib
+  - copy qmapboxgl.dll qmapboxgl\lib
+  - copy qmapboxgl.exp qmapboxgl\lib
+  - copy qmapboxgl.lib qmapboxgl\lib
   - copy %APPVEYOR_BUILD_FOLDER%\platform\qt\include\* qmapboxgl\include
   - 7z a qmapboxgl-%APPVEYOR_REPO_COMMIT%.zip qmapboxgl
 
