--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -26,6 +26,7 @@ include(${PROJECT_SOURCE_DIR}/vendor/benchmark.cmake)
 target_link_libraries(mbgl-benchmark PRIVATE
     Mapbox::Maps::Core
     Mapbox::Maps::Platform
+    Mapbox::Maps::GFX
     benchmark
 )
 
