--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -138,6 +138,7 @@ target_include_directories(mbgl-test PUBLIC
 )
 
 include(${PROJECT_SOURCE_DIR}/vendor/args.cmake)
+include(${PROJECT_SOURCE_DIR}/vendor/boost.cmake)
 include(${PROJECT_SOURCE_DIR}/vendor/gtest.cmake)
 include(${PROJECT_SOURCE_DIR}/vendor/pixelmatch-cpp.cmake)
 include(${PROJECT_SOURCE_DIR}/vendor/sqlite.cmake)
@@ -147,6 +148,7 @@ target_link_libraries(mbgl-test PRIVATE
     Mapbox::Maps::Platform
     Mapbox::Maps::GFX
     args
+    boost
     gtest
     pixelmatch-cpp
     sqlite
