--- a/platform/linux/CMakeLists.txt
+++ b/platform/linux/CMakeLists.txt
@@ -11,6 +11,49 @@ pkg_search_module(LIBUV libuv REQUIRED)
 add_library(mbgl-platform-linux STATIC
     ${CMAKE_CURRENT_LIST_DIR}/src/gl_functions.cpp
     ${CMAKE_CURRENT_LIST_DIR}/src/headless_backend_egl.cpp
+    ${PROJECT_SOURCE_DIR}/gfx/gl/src/mbgl/gl/attribute.cpp
+    ${PROJECT_SOURCE_DIR}/gfx/gl/src/mbgl/gl/command_encoder.cpp
+    ${PROJECT_SOURCE_DIR}/gfx/gl/src/mbgl/gl/context.cpp
+    ${PROJECT_SOURCE_DIR}/gfx/gl/src/mbgl/gl/debugging_extension.cpp
+    ${PROJECT_SOURCE_DIR}/gfx/gl/src/mbgl/gl/enum.cpp
+    ${PROJECT_SOURCE_DIR}/gfx/gl/src/mbgl/gl/object.cpp
+    ${PROJECT_SOURCE_DIR}/gfx/gl/src/mbgl/gl/offscreen_texture.cpp
+    ${PROJECT_SOURCE_DIR}/gfx/gl/src/mbgl/gl/render_pass.cpp
+    ${PROJECT_SOURCE_DIR}/gfx/gl/src/mbgl/gl/renderer_backend.cpp
+    ${PROJECT_SOURCE_DIR}/gfx/gl/src/mbgl/gl/texture.cpp
+    ${PROJECT_SOURCE_DIR}/gfx/gl/src/mbgl/gl/uniform.cpp
+    ${PROJECT_SOURCE_DIR}/gfx/gl/src/mbgl/gl/upload_pass.cpp
+    ${PROJECT_SOURCE_DIR}/gfx/gl/src/mbgl/gl/value.cpp
+    ${PROJECT_SOURCE_DIR}/gfx/gl/src/mbgl/gl/vertex_array.cpp
+    ${PROJECT_SOURCE_DIR}/gfx/gl/src/mbgl/platform/gl_functions.cpp
+    ${PROJECT_SOURCE_DIR}/gfx/gl/src/mbgl/programs/gl/background.cpp
+    ${PROJECT_SOURCE_DIR}/gfx/gl/src/mbgl/programs/gl/background_pattern.cpp
+    ${PROJECT_SOURCE_DIR}/gfx/gl/src/mbgl/programs/gl/circle.cpp
+    ${PROJECT_SOURCE_DIR}/gfx/gl/src/mbgl/programs/gl/clipping_mask.cpp
+    ${PROJECT_SOURCE_DIR}/gfx/gl/src/mbgl/programs/gl/collision_box.cpp
+    ${PROJECT_SOURCE_DIR}/gfx/gl/src/mbgl/programs/gl/collision_circle.cpp
+    ${PROJECT_SOURCE_DIR}/gfx/gl/src/mbgl/programs/gl/debug.cpp
+    ${PROJECT_SOURCE_DIR}/gfx/gl/src/mbgl/programs/gl/fill.cpp
+    ${PROJECT_SOURCE_DIR}/gfx/gl/src/mbgl/programs/gl/fill_extrusion.cpp
+    ${PROJECT_SOURCE_DIR}/gfx/gl/src/mbgl/programs/gl/fill_extrusion_pattern.cpp
+    ${PROJECT_SOURCE_DIR}/gfx/gl/src/mbgl/programs/gl/fill_outline.cpp
+    ${PROJECT_SOURCE_DIR}/gfx/gl/src/mbgl/programs/gl/fill_outline_pattern.cpp
+    ${PROJECT_SOURCE_DIR}/gfx/gl/src/mbgl/programs/gl/fill_pattern.cpp
+    ${PROJECT_SOURCE_DIR}/gfx/gl/src/mbgl/programs/gl/heatmap.cpp
+    ${PROJECT_SOURCE_DIR}/gfx/gl/src/mbgl/programs/gl/heatmap_texture.cpp
+    ${PROJECT_SOURCE_DIR}/gfx/gl/src/mbgl/programs/gl/hillshade.cpp
+    ${PROJECT_SOURCE_DIR}/gfx/gl/src/mbgl/programs/gl/hillshade_prepare.cpp
+    ${PROJECT_SOURCE_DIR}/gfx/gl/src/mbgl/programs/gl/line.cpp
+    ${PROJECT_SOURCE_DIR}/gfx/gl/src/mbgl/programs/gl/line_gradient.cpp
+    ${PROJECT_SOURCE_DIR}/gfx/gl/src/mbgl/programs/gl/line_pattern.cpp
+    ${PROJECT_SOURCE_DIR}/gfx/gl/src/mbgl/programs/gl/line_sdf.cpp
+    ${PROJECT_SOURCE_DIR}/gfx/gl/src/mbgl/programs/gl/raster.cpp
+    ${PROJECT_SOURCE_DIR}/gfx/gl/src/mbgl/programs/gl/shader_source.cpp
+    ${PROJECT_SOURCE_DIR}/gfx/gl/src/mbgl/programs/gl/shaders.cpp
+    ${PROJECT_SOURCE_DIR}/gfx/gl/src/mbgl/programs/gl/symbol_icon.cpp
+    ${PROJECT_SOURCE_DIR}/gfx/gl/src/mbgl/programs/gl/symbol_sdf_icon.cpp
+    ${PROJECT_SOURCE_DIR}/gfx/gl/src/mbgl/programs/gl/symbol_sdf_text.cpp
+    ${PROJECT_SOURCE_DIR}/gfx/gl/src/mbgl/renderer/layers/render_custom_layer.cpp
     ${PROJECT_SOURCE_DIR}/platform/default/src/mbgl/gfx/headless_backend.cpp
     ${PROJECT_SOURCE_DIR}/platform/default/src/mbgl/gfx/headless_frontend.cpp
     ${PROJECT_SOURCE_DIR}/platform/default/src/mbgl/gl/headless_backend.cpp
@@ -49,9 +92,11 @@ add_library(mbgl-platform-linux STATIC
 # FIXME: Disabling because of a circular linking dependency
 target_compile_definitions(mbgl-platform-linux PRIVATE
     MBGL_LAYER_CUSTOM_DISABLE_ALL
+    MBGL_USE_GLES2
 )
 
 target_include_directories(mbgl-platform-linux PRIVATE
+    ${PROJECT_SOURCE_DIR}/gfx/gl/src
     ${CURL_INCLUDE_DIRS}
     ${EGL_INCLUDE_DIRS}
     ${GLES_INCLUDE_DIRS}
@@ -62,6 +107,8 @@ target_include_directories(mbgl-platform-linux PRIVATE
 # FIXME: Platform should not export public headers but it
 # is currently doing so because of default styles
 target_include_directories(mbgl-platform-linux PUBLIC
+    ${PROJECT_SOURCE_DIR}/gfx/gl/include
+    ${PROJECT_SOURCE_DIR}/gfx/gl/src
     ${PROJECT_SOURCE_DIR}/platform/default/include
 )
 
@@ -78,7 +125,6 @@ target_link_libraries(mbgl-platform-linux PRIVATE
     ${LIBUV_LIBRARIES}
     ICU::i18n
     Mapbox::Maps::Core
-    Mapbox::Maps::GFX
     PNG::PNG
     boost
     nunicode
@@ -99,7 +145,6 @@ target_compile_definitions(mbgl-test-linux PRIVATE
 target_link_libraries(mbgl-test-linux PRIVATE
     Mapbox::Maps::Core
     Mapbox::Maps::Platform
-    Mapbox::Maps::GFX
     Mapbox::Maps::Test
 )
 
@@ -110,7 +155,6 @@ add_executable(mbgl-benchmark-linux
 target_link_libraries(mbgl-benchmark-linux PRIVATE
     Mapbox::Maps::Core
     Mapbox::Maps::Platform
-    Mapbox::Maps::GFX
     Mapbox::Maps::Benchmark
 )
 
